# dao4j-derive

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/label/: mod.rs
src/traits/: label.rs  mod.rs  relation.rs
