# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dao4j-derive"
version = "0.0.1"
authors = ["ponyloop <anlaaakso@protonmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dao4j={ path = "../dao4j" }
syn = "0.14.4"
quote = "0.6.3"
proc-macro2 = "0.4.30"
